@kth/style/scss/components/Dropdown.scss
@use "../globals.scss" as g;
@use "./Button.scss";

.#{g.$prefix}-dropdown {
  max-width: 100vw;
  max-height: 100vh;

  .container {
    background: #fff;
    border: 1px solid gray;
    padding: 1rem;
  }

  .group {
    margin-block-start: 0.25rem;
    margin-block-end: 0.5rem;
  }

  .group-name {
    font-weight: 600;
  }

  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  a {
    display: block;
    padding-block: 0.25rem;
  }
}

